# procon32

./: .gitignore  README.md
.github/workflows/: main.yml
algo/src/: CMakeLists.txt  solver.cu
algo/src/build_procedure/: CMakeLists.txt  build_procedure.cpp  procedure_checker.cpp  procs_grader.cpp  simple_build_procedure.cpp
algo/src/build_procedure/lib/: CMakeLists.txt  original_positions.cpp  original_positions.hpp  procedure.cpp  procedure.hpp  procedures.cpp  procedures.hpp
algo/src/build_procedure/solver/: CMakeLists.txt  constant.hpp  hoge.py  interface.hpp  kr_solver.cpp  kr_solver.hpp  rk_solver.cpp  rk_solver.hpp  rough_sorter.cpp  rough_sorter.hpp  simple_solver.cpp  simple_solver.hpp  solvers.hpp  state.cpp  state.hpp  strict_sorter.cpp  strict_sorter.hpp
algo/src/common_lib/: CMakeLists.txt  settings.cpp  settings.hpp
algo/src/image_restorer/: CMakeLists.txt  image_restorer.cpp  image_restorer.cu
algo/src/image_restorer/adjacency_evaluator/: CMakeLists.txt  adjacency_evaluators.hpp  conv_eval.py  convolution_adjacency_evaluator.cpp  convolution_adjacency_evaluator.hpp  interface.hpp  one_pixel_adjacency_evaluator.cpp  one_pixel_adjacency_evaluator.hpp  parallel_three_pixel_adjacency_evaluator.cpp  parallel_three_pixel_adjacency_evaluator.hpp  vertical_two_pixel_adjacency_evaluator.cpp  vertical_two_pixel_adjacency_evaluator.hpp
algo/src/image_restorer/lib/: CMakeLists.txt  answer.cpp  answer.hpp  image.cpp  image.hpp  image_restorer_lib.hpp  settings.cpp  settings.hpp
algo/src/image_restorer/solver/: CMakeLists.txt  interface.hpp  side_beam_search.cpp  side_beam_search.hpp  solvers.hpp
algo/src/utility/: CMakeLists.txt  comparable_data.hpp  direction.cpp  direction.hpp  limited_storage.hpp  macro.hpp  pos.hpp  random.cpp  random.hpp  rgb.hpp  simulated_annealing_manager.cpp  simulated_annealing_manager.hpp  stl_io.hpp  time_manager.cpp  time_manager.hpp  timing_device.cpp  timing_device.hpp  utility.hpp  vec2.hpp  vec3.hpp  weak_vector.hpp
algo/src/utility/general_class/: CMakeLists.txt  direction.hpp  simulated_annealing.cpp  simulated_annealing.hpp  vec.hpp
algo/src/utility/random/: CMakeLists.txt  random.cpp  random.hpp
algo/src/utility/time/: CMakeLists.txt  stopwatch.cpp  stopwatch.hpp  time_manager.cpp  time_manager.hpp
server/: competition_server.py  server.py  solver_manager.py
server/general/: server.py
server/local/: local_server.py
test/: all.toml  config.toml  example_config.toml  result.txt  tester.py
test/lib/: constant.py  images.py  test.py  testlog.py  utility.py
test/testcases/: example.toml
utility/: image_divider.py  restore_img.py
visualizer/: Main.cpp
