#add_library(stl_io stl_io.cpp)
# add_library(random random.cpp)
# add_library(timing_device timing_device.cpp)
# add_library(time_manager time_manager.cpp)
# add_library(simulated_annealing_manager simulated_annealing_manager.cpp)


#target_include_directories(stl_io PUBLIC ${PROJECT_SOURCE_DIR}/utility)
# target_include_directories(random PUBLIC ${PROJECT_SOURCE_DIR}/utility)
# target_include_directories(timing_device PUBLIC ${PROJECT_SOURCE_DIR}/utility)
# target_include_directories(time_manager PUBLIC ${PROJECT_SOURCE_DIR}/utility)
# target_include_directories(simulated_annealing_manager PUBLIC ${PROJECT_SOURCE_DIR}/utility)

# add_library(utility random direction timing_device time_manager simulated_annealing_manager)
# target_include_directories(utility PUBLIC ${PROJECT_SOURCE_DIR}/utility)

